test/sematest/valid/early_return.java

class Foo {
  public static void main(String[] args) {
    return;
    int a = 4;
    return;
    int b = 5;
    return;
    boolean c = a == b;
    return;
  }
}
