test/sematest/invalid/method_overloading.java
class A {
  public static void main(String[] args) {

  }

  public void b(){

  }

  public int b(int a){
    return 4;
  }
}